--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setlistfm-js",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "This is an easy to use, promise based API wrapper for the most recent version of the setlist.fm Web API. Made with love and JavaScript.",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,10 @@
     "concerts",
     "nodejs",
     "api-wrapper",
-    "api-token"
+    "api-token",
+    "react",
+    "react-native",
+    "react-js"
   ],
   "author": "Johannes Terhuerne <johannes@terhuerne.org>",
   "license": "MIT",
